Fix present form button z-index

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -632,6 +632,7 @@ form {
     background-color: var(--app-color-subtle);
     border: 1px solid var(--app-color-supporting-1);
     display: none;
+    z-index: 1;
 }
 
 #add-present-mobile img {
